fix: map type text overflowing dropdown (closes #4196)

--- a/app/assets/stylesheets/observations/identify/observation_modal.scss
+++ b/app/assets/stylesheets/observations/identify/observation_modal.scss
@@ -788,7 +788,6 @@ body > [role="dialog"] .ObservationModal {
     }
   }
   .gmnoprint.gm-style-mtc {
-    width: 70px !important;
     [role="button"] {
       padding-left: 10px !important;
     }
